--- a/docroot/themes/custom/themekit/partials/region/footer-bottom/footer-bottom.scss
+++ b/docroot/themes/custom/themekit/partials/region/footer-bottom/footer-bottom.scss
@@ -4,6 +4,7 @@
 
 .region-footer-bottom {
   border-top: 1px solid $color-gray-200;
+  background-color: $color-white;
   @include top-bottom(padding, rem-calc(24));
   @include breakpoint(medium) {
     padding-top: rem-calc(48);
