--- a/docroot/themes/custom/themekit/partials/component/community-features/block--community-features.scss
+++ b/docroot/themes/custom/themekit/partials/component/community-features/block--community-features.scss
@@ -9,4 +9,22 @@
       margin-top: 32px;
     }
   }
+
+  .twocol-layout .layout__region--first & {
+    @include breakpoint(medium) {
+      padding-right: rem-calc(64);
+    }
+    @include breakpoint(large) {
+      padding-right: rem-calc(112);
+    }
+  }
+
+  .twocol-layout .layout__region--second & {
+    @include breakpoint(medium) {
+      padding-left: rem-calc(64);
+    }
+    @include breakpoint(large) {
+      padding-left: rem-calc(112);
+    }
+  }
 }
