--- a/docroot/themes/custom/themekit/partials/region/footer-top/footer-top.scss
+++ b/docroot/themes/custom/themekit/partials/region/footer-top/footer-top.scss
@@ -21,23 +21,21 @@
       grid-template-columns: grid-column(8) grid-column(4);
     }
     @include brand-shape(footer) {
+      @include left-right(margin, -200px);
       top: 0;
-      min-width: 200vw;
-      transform: translate3d(-100vw, 0, 0);
-      @include breakpoint(medium) {
-        transform: translate3d(-65%, 0, 0);
-      }
+      margin-left: -400px;
+      margin-right: -200px;
+      min-width: calc(100vw + 600px);
       @include breakpoint(large) {
         display: none;
       }
     }
     @include brand-shape(footer-frame, after) {
       top: 0;
-      min-width: 200vw;
-      transform: translate3d(-100vw, 0, 0);
-      @include breakpoint(medium) {
-        transform: translate3d(-65%, 0, 0);
-      }
+      margin-left: -400px;
+      margin-right: -200px;
+      min-width: calc(100vw + 600px);
+      min-height: calc(100% + 60px);
       @include breakpoint(large) {
         display: none;
       }
