--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -157,6 +157,9 @@ $icons: (
   social-twitter: "\e91b",
   social-youtube: "\e91c",
   sport: "\e91d",
+  cc: "\e91e",
+  copyright: "\e91f",
+  register: "\e920",
 );
 /******* End Drupal Defaults *******/
 
