Add overflow-hidden for layouts (to hide brand shapes)

--- a/docroot/themes/custom/themekit/partials/layout/layout.scss
+++ b/docroot/themes/custom/themekit/partials/layout/layout.scss
@@ -3,6 +3,8 @@
 ////
 
 .layout {
+  overflow: hidden;
+
   // Bottom space for the page content
   &:last-child {
     padding-bottom: rem-calc(60);
