Fix partners component layout when only 6 items

--- a/docroot/themes/custom/themekit/partials/views/partners/view--partners.scss
+++ b/docroot/themes/custom/themekit/partials/views/partners/view--partners.scss
@@ -46,7 +46,7 @@
             transform: translateX(calc(100% + 32px));
           }
         }
-        &:last-child {
+        &:nth-child(7) {
           @include breakpoint(medium) {
             transform: translateX(calc(100% + 32px));
           }
