--- a/docroot/themes/custom/themekit/partials/layout/layout.scss
+++ b/docroot/themes/custom/themekit/partials/layout/layout.scss
@@ -5,14 +5,6 @@
 .layout {
   overflow: hidden;
 
-  // Bottom space for the page content
-  &:last-child {
-    padding-bottom: rem-calc(60);
-    @include breakpoint(medium) {
-      padding-bottom: rem-calc(40);
-    }
-  }
-
   > .layout-content {
     @include content-width(default);
 
@@ -23,14 +15,14 @@
 
       &:not(:last-child) {
         @include breakpoint(medium down) {
-          padding-bottom: rem-calc(40);
+          padding-bottom: rem-calc(64);
         }
       }
 
       .block:not(.block--title) + .block {
-        margin-top: rem-calc(40);
+        margin-top: rem-calc(64);
         @include breakpoint(large) {
-          margin-top: rem-calc(40);
+          margin-top: rem-calc(96);
         }
       }
     }
@@ -38,23 +30,9 @@
 
   // Spacing between sections
   &.section-padding--default {
-    @include top-bottom(padding, rem-calc(45));
-    @include breakpoint(medium) {
-      @include top-bottom(padding, rem-calc(45));
-    }
-  }
-
-  &.section-padding--small {
-    @include top-bottom(padding, rem-calc(30));
-    @include breakpoint(medium) {
-      @include top-bottom(padding, rem-calc(30));
-    }
-  }
-
-  &.section-padding--none {
-    @include top-bottom(padding, 0);
-    @include breakpoint(medium) {
-      @include top-bottom(padding, 0);
+    padding-top: 64px;
+    @include breakpoint(large) {
+      padding-top: 96px;
     }
   }
 
