--- a/docroot/themes/custom/themekit/partials/component/categories/block--inline-block--categories.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/categories/block--inline-block--categories.html.twig
@@ -8,6 +8,13 @@
       {{ rendered_content }}
       <div class="categories-links">
         <h4>{{ 'Drupal voor'|t }}</h4>
+        <ul>
+          {% for category in block.field_categories %}
+            <li>
+              <a href="{{ url('entity.taxonomy_term.canonical', { 'taxonomy_term': category.entity.id() }) }}">{{ category.entity.label() }}</a>
+            </li>
+          {% endfor %}
+        </ul>
 
       </div>
       {{ content.field_p_link }}
