--- a/docroot/themes/custom/themekit/partials/taxonomy/category/featured-teaser/taxonomy--category--featured-teaser.scss
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/featured-teaser/taxonomy--category--featured-teaser.scss
@@ -4,7 +4,7 @@
     .field--name-field-image {
       padding-bottom: 64.4%;
       position: relative;
-      @include breakpoint(medium) {
+      @include breakpoint(large) {
         margin-bottom: 12px;
       }
       img {
@@ -17,7 +17,7 @@
       }
     }
     .term-content {
-      @include breakpoint(small down) {
+      @include breakpoint(medium down) {
         display: none;
       }
       h5 {
