Add styles for Partners view

--- a/docroot/themes/custom/themekit/partials/node/type/partner/teaser/node--partner--teaser.scss
+++ b/docroot/themes/custom/themekit/partials/node/type/partner/teaser/node--partner--teaser.scss
@@ -4,6 +4,9 @@
     max-width: 220px;
     padding-bottom: 100%;
     position: relative;
+    .view-partners.view-display-id-listing & {
+      max-width: 305px;
+    }
     > a {
       position: absolute;
       width: 100%;
