--- a/docroot/themes/custom/themekit/partials/views/partners/view--partners.scss
+++ b/docroot/themes/custom/themekit/partials/views/partners/view--partners.scss
@@ -54,4 +54,65 @@
       }
     }
   }
+
+  &.view-display-id-listing {
+    .view-content {
+      .category-wrapper {
+        > h3 {
+          font-size: rem-calc(15);
+          line-height: 1.5;
+          text-transform: uppercase;
+          font-weight: $global-weight-medium;
+          letter-spacing: 0.2em;
+          margin-bottom: 20px;
+          color: $color-gray-900;
+        }
+        &:not(:last-child) {
+          margin-bottom: 32px;
+          @include breakpoint(large) {
+            margin-bottom: 64px;
+          }
+        }
+        .category-items {
+          display: flex;
+          flex-wrap: wrap;
+          margin-left: -8px;
+          margin-right: -8px;
+          @include breakpoint(medium) {
+            margin-left: -16px;
+            margin-right: -16px;
+          }
+          > .views-row {
+            flex-shrink: 0;
+            width: calc((100% - (16px * 3)) / 4);
+            margin: 0 8px 16px;
+            @include breakpoint(medium) {
+              width: calc((100% - (32px * 7)) / 8);
+              margin: 0 16px 32px;
+            }
+          }
+        }
+        &:nth-child(1) {
+          .category-items {
+            > .views-row {
+              width: calc((100% - 16px) / 2);
+              @include breakpoint(medium) {
+                width: calc((100% - (32px * 3)) / 4);
+              }
+            }
+          }
+        }
+        &:nth-child(2) {
+          .category-items {
+            > .views-row {
+              width: calc((100% - (16px * 2)) / 3);
+              @include breakpoint(medium) {
+                width: calc((100% - (32px * 5)) / 6);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
