--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
@@ -1,5 +1,123 @@
 .view-cases-listing {
-  @include content-width(default);
+  > .view-filters {
+    position: relative;
+    margin-bottom: 40px;
+
+    .form-inline {
+      display: flex;
+      @include breakpoint(small down) {
+        flex-direction: column;
+      }
+      @include breakpoint(medium) {
+        align-items: stretch;
+      }
+    }
+
+    .form-item {
+      margin: 0;
+    }
+
+    .form-item-title {
+      input {
+        @include font-sizes(kicker-large);
+        width: 100%;
+        height: 48px;
+        border: none;
+        padding: 12px 20px 12px 60px;
+        background: $color-gray-100;
+        @include breakpoint(medium) {
+          height: 56px;
+          padding: 16px 20px 16px 32px;
+        }
+
+        &::placeholder {
+          @include font-sizes(kicker-large);
+          color: $color-gray-900;
+        }
+
+        &:focus {
+          box-shadow: inset 0 0 8px rgba($color-black, 0.08);
+        }
+
+        &:focus-visible {
+          outline: none;
+        }
+      }
+    }
+
+    .form-item-field-category-target-id {
+      label {
+        display: flex;
+        align-items: center;
+        padding: 12px 20px;
+        background-color: $color-white;
+        box-shadow: inset 0 0 0 2px $color-gray-100;
+        @include font-sizes(kicker-large);
+        @include icon-after(angle-bottom) {
+          @include global-transition(transform);
+          margin-left: 7px;
+          font-size: rem-calc(24);
+        }
+        @include breakpoint(medium) {
+          padding: 16px 20px 16px 32px;
+        }
+
+        &.active::after {
+          transform: scaleX(-1);
+        }
+      }
+    }
+
+    .form-submit {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 56px;
+      height: 48px;
+      border: none;
+      background: url(../../../assets/images/svg/icons/search.svg) 50% 50%
+        no-repeat;
+      background-size: 24px auto;
+      font: 0/0 transparent;
+      @include breakpoint(medium) {
+        height: 56px;
+      }
+
+      &:focus-visible {
+        outline: none;
+      }
+    }
+
+    .bef-links {
+      @include breakpoint(small down) {
+        margin: 20px 20px 0;
+      }
+      @include breakpoint(medium) {
+        margin-top: 24px;
+      }
+
+      ul {
+        margin: 0;
+        list-style-type: none;
+        @include breakpoint(small down) {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+      }
+
+      li {
+        margin: 0 12px 12px 0;
+        &::marker {
+          display: none;
+        }
+      }
+
+      a {
+        @include link(secondary);
+      }
+    }
+  }
 
   > .view-content {
     @include breakpoint(medium) {
@@ -11,6 +129,7 @@
       @include breakpoint(medium) {
         @include flex-grid-column(6);
         margin-top: 0;
+        margin-bottom: 32px;
       }
 
       @include breakpoint(large) {
