--- a/docroot/themes/custom/themekit/partials/views/views-mini-pager.html.twig
+++ b/docroot/themes/custom/themekit/partials/views/views-mini-pager.html.twig
@@ -23,9 +23,10 @@
         </li>
       {% endif %}
       {% if items.current %}
-        <li class="pager__item is-active">
+        <li class="pager__item is-active">{{ items.current }}</li>
+        <li class="pager__item is-total">
           {% trans %}
-            Page {{ items.current }}
+            van {{ items.total }}
           {% endtrans %}
         </li>
       {% endif %}
