--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -106,7 +106,6 @@ $global-button-cursor: auto;
 $global-color-pick-contrast-tolerance: 0;
 $print-transparent-backgrounds: true;
 
-
 // 1.Drupal - All of these settings should be copied over when the _settings.scss partial is updated on new version of foundation!!!
 // --------------
 
@@ -184,6 +183,7 @@ $grid-column-count: 12;
 $grid-column-gutter: (
   small: 16px,
   medium: 16px,
+  large: 32px,
 );
 $grid-column-align-edge: true;
 $grid-column-alias: "columns";
