--- a/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
@@ -32,7 +32,13 @@
 
   <div{{ content_attributes.addClass('node__content') }}>
     <div class="field-content">
-      {{ rendered_content }}
+      <div class="field-content-items">
+        {{ rendered_content }}
+      </div>
+      <div class="field-view">
+        <h2 class="heading">{{ 'Cases van'|t }} {{ node.label }} {{ 'waar wij trots op zijn'|t }}</h2>
+        {{ drupal_view('cases', 'cases') }}
+      </div>
     </div>
     <div class="field-info">
       <div class="field-item-info">
@@ -99,5 +105,4 @@
       {% endif %}
     </div>
   </div>
-  {{ drupal_view('cases', 'cases') }}
 {% endblock %}
