Update style for view teaser on parner page, update structure

--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -262,6 +262,12 @@
         @include breakpoint(medium up) {
           margin-bottom: 56px;
         }
+
+        @include breakpoint(small down) {
+          br {
+            display: none;
+          }
+        }
       }
       &.node__title {
         margin-bottom: 12px;
