--- a/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
@@ -36,7 +36,7 @@
         {{ rendered_content }}
       </div>
       <div class="field-view">
-        <h2 class="heading">{{ 'Cases van'|t }} {{ node.label }} {{ 'waar wij trots op zijn'|t }}</h2>
+        <h2 class="heading">{{ 'Cases van'|t }} {{ node.label }} <br> {{ 'waar wij trots op zijn'|t }}</h2>
         {{ drupal_view('cases', 'cases') }}
       </div>
     </div>
