--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--cases.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--cases.scss
@@ -21,6 +21,13 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
       }
+
+      .node--type-case.node--view-mode-teaser {
+        img {
+          aspect-ratio: 16 / 9;
+          height: auto;
+        }
+      }
     }
   }
 }
