add tempalte, styles for event, update config, add short date

--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -274,6 +274,12 @@
       }
     }
   }
+
+  .field--name-field-date-range {
+    background: $color-linear-vertical-blue;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 @mixin shape-image($inverse: false) {
