--- a/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
@@ -4,6 +4,7 @@
     'field_image',
     'field_date_range',
     'field_intro',
+    'field_address',
   )
   %}
 
@@ -13,6 +14,7 @@
       <a class="link--back mobile" href="/events" >{{ 'Events'|t }}</a>
       <h1 class="heading">{{ node.label }}</h1>
       {{ content.field_date_range }}
+
       {{ content.field_intro }}
     </div>
     {{ content.field_image }}
@@ -24,6 +26,12 @@
       {{ rendered_content }}
     </div>
     <div class="field-info">
+      {% if node.field_address|length %}
+        <h4 class="heading">{{ 'LOCATED AT' }}</h4>
+        <div class="field-contact">
+          {{ content.field_address }}
+        </div>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
