add multiple slider for category, add template for cases slider, update category tempalte, create view for cases slider, update glide

--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
@@ -30,4 +30,8 @@
     </div>
   </div>
 
+  <div class="block-slider-cases">
+    {{ drupal_view('cases', 'cases_slider') }}
+  </div>
+
 {% endblock %}
