--- a/docroot/themes/custom/themekit/partials/node/type/case/teaser/node--case--teaser.scss
+++ b/docroot/themes/custom/themekit/partials/node/type/case/teaser/node--case--teaser.scss
@@ -43,11 +43,8 @@
     .field--name-field-image {
       img {
         width: 100%;
-        height: 212px;
+        aspect-ratio: 16 / 9;
         object-fit: cover;
-        @include breakpoint(large) {
-          height: 190px;
-        }
       }
     }
 
