--- a/docroot/themes/custom/themekit/partials/views/cases/views-view--cases--cases-slider.html.twig
+++ b/docroot/themes/custom/themekit/partials/views/cases/views-view--cases--cases-slider.html.twig
@@ -47,9 +47,9 @@
   <div class="glide-wrapper-multiple">
     <div class="glide">
       <div class="glide__track" data-glide-el="track">
-        <ul class="glide__slides">
+        <div class="glide__slides">
           {{ rows }}
-        </ul>
+        </div>
       </div>
       <div class="wrapper-control">
         <div class="glide__arrows" data-glide-el="controls">
