Update space for multiple slider

--- a/docroot/themes/custom/themekit/partials/common/glide/glide.scss
+++ b/docroot/themes/custom/themekit/partials/common/glide/glide.scss
@@ -95,4 +95,12 @@
   .glide__slides {
     padding: 20px 0;
   }
+
+  .glide__track {
+    margin-right: -32px;
+
+    @include breakpoint(medium down) {
+      margin-right: -16px;
+    }
+  }
 }
