--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
@@ -26,8 +26,8 @@
         padding: 12px 20px 12px 60px;
         background: $color-gray-100;
         @include breakpoint(medium) {
+          @include top-bottom(padding, 16px);
           height: 56px;
-          padding: 16px 20px 16px 32px;
         }
 
         &::placeholder {
@@ -45,26 +45,24 @@
       }
     }
 
-    .form-item-field-category-target-id {
-      label {
-        display: flex;
-        align-items: center;
-        padding: 12px 20px;
-        background-color: $color-white;
-        box-shadow: inset 0 0 0 2px $color-gray-100;
-        @include font-sizes(kicker-large);
-        @include icon-after(angle-bottom) {
-          @include global-transition(transform);
-          margin-left: 7px;
-          font-size: rem-calc(24);
-        }
-        @include breakpoint(medium) {
-          padding: 16px 20px 16px 32px;
-        }
+    .toggle-filters {
+      display: flex;
+      align-items: center;
+      padding: 12px 20px;
+      background-color: $color-white;
+      box-shadow: inset 0 0 0 2px $color-gray-100;
+      @include font-sizes(kicker-large);
+      @include icon-after(angle-bottom) {
+        @include global-transition(transform);
+        margin-left: 7px;
+        font-size: rem-calc(24);
+      }
+      @include breakpoint(medium) {
+        padding: 16px 20px 16px 32px;
+      }
 
-        &.active::after {
-          transform: scaleX(-1);
-        }
+      &.active::after {
+        transform: scaleX(-1);
       }
     }
 
@@ -88,7 +86,7 @@
       }
     }
 
-    .bef-links {
+    .bef-checkboxes {
       @include breakpoint(small down) {
         margin: 20px 20px 0;
       }
@@ -96,25 +94,14 @@
         margin-top: 24px;
       }
 
-      ul {
-        margin: 0;
-        list-style-type: none;
-        @include breakpoint(small down) {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-        }
+      @include breakpoint(small down) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
       }
 
-      li {
+      > .form-item {
         margin: 0 12px 12px 0;
-        &::marker {
-          display: none;
-        }
-      }
-
-      a {
-        @include link(secondary);
       }
     }
   }
